# CudaTestingPractice

./: CMakeLists.txt  CudaParallel.cu  CudaParallel.cuh  CudaParallelWrapper.cu  CudaParallelWrapper.hpp  ParallelLayer.cu  ParallelLayer.cuh  ParallelLayerWrapper.cu  ParallelLayerWrapper.cuh  main.cpp
